# drawsbml

./: LICENSE  Makefile  README.md  drawsbml.py  pyproject.toml  requirements.txt
.ci/: run_on_all.sh
.github/workflows/: python-app.yml
drawsbml/: __main__.py  drawsbml.py
sbml/: BIOMD0000000100.xml.gv  BIOMD0000000200.xml.gv  R-HSA-70326.sbml
tests/: R-HSA-2408522.sbml  test_all.py
